add rename support
